--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -117,19 +117,19 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速UT`[]🛫 69云`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 69云`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🚀 手动切换`select`.*
-;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`[]🛫 69云`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
-;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速`[]🛫 三分`[]🛫 XSUS`[]🛫 一分`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🎲 智能负载`smart`[]🛫 极速`[]🛫 一分`[]🛫 69云`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`(jiarui)
 custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
-custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速UT`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 极速LB`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 极速LB`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
@@ -143,21 +143,20 @@ custom_proxy_group=📲 电报消息`select`[]🎯 全球直连`[]🚀 节点选
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择
-custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎥 Disney+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎻 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=☁️ CFWorker`smart`(CFEP)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🛫 极速UT`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🛫 极速LB`load-balance`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 极速`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 一分`url-test`(一分)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🛫 XSUS`url-test`(XSUS)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🛫 iKuuu`url-test`(iKuuu)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(韩|kr|KR||Kr|首尔|春川|Korea)`http://cp.cloudflare.com/generate_204`300,,50
