--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -141,20 +141,20 @@ custom_proxy_group=📲 电报消息`select`[]🎯 全球直连`[]🚀 节点选
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择
-custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎥 Disney+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎻 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速UT`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=☁️ CFWorker`smart`(CFEP)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速UT`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速LB`load-balance`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
-;custom_proxy_group=🛫 XSUS`url-test`(XSUS)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 共享`url-test`(共享)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 iKuuu`url-test`(iKuuu)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
