--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -126,7 +126,7 @@ custom_proxy_group=🎲 智能负载`smart`[]🛫 极速`[]🛫 一分`[]🛫 69
 custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`(jiarui)
-custom_proxy_group=🧮 JIARUI`url-test`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换`http://172.20.10.153`60,,50
+custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
 custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
