--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -50,7 +50,11 @@ ruleset=🎰 SpeedTest,https://raw.githubusercontent.com/GeQ1an/Rules/master/Qua
 ruleset=🎰 SpeedTest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Speedtest/Speedtest.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/zuluion/Clash-Template-Config/master/Filter/OpenAI.yaml
+ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/zuluion/Clash-Template-Config/master/Filter/Gemini.yaml
+ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/zuluion/Clash-Template-Config/master/Filter/Claude.yaml
 ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/MadisonWirtanen/ZJU-Rules/refs/heads/main/ai.yaml
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
@@ -124,7 +128,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 69云`[]🛫 共享`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 69云`[]🛫 共享`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速`[]🛫 三分`[]🛫 XSUS`[]🛫 一分`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎲 智能负载`smart`[]🛫 极速`[]🛫 一分`[]🛫 69云`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority="(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates):1.1;(港|HK|hk|Hong Kong|HongKong|hongkong|深港):0.9"
@@ -134,30 +138,30 @@ custom_proxy_group=🔯 故障转移`fallback`^(?!.*(jiarui)).*`http://cp.cloudf
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`(jiarui)
 custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
 custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📲 电报消息`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📲 电报消息`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择
-custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎥 Disney+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎻 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=☁️ CFWorker`smart`(CFEP)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=☁️ CFWorker`smart`(edgetunnel)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 ;custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
@@ -172,7 +176,7 @@ custom_proxy_group=🇸🇬 新加坡节点`smart`((?i)SG|🇸🇬|新加坡|坡
 custom_proxy_group=🇭🇰 香港节点`smart`((?i)HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🇹🇼 台湾节点`smart`((?i)TW|🇹🇼|台|新北|彰化|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🇨🇳 犄角旮旯`smart`^(?!(?i).*?(jiarui|US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates|KR|🇰🇷|韩|Korea|首尔|春川|JP|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|Japan|SG|🇸🇬|新加坡|坡|狮城|Singapore|HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港|TW|🇹🇼|台|新北|彰化|Taiwan)).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`(jiarui)
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`🚀 节点选择`🚀 手动切换`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`(jiarui)
 
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
