--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -30,11 +30,11 @@ ruleset=🧮 JIARUI,[]IP-CIDR,192.168.20.0/23
 
 ;修复 Google Play Store 避免GooglePlay商店等待中
 ;ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.com
-ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,play.googleapis.com
-ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN,connectivitycheck.gstatic.com
-ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,android.clients.google.com
-ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=📢 GooglePlay,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=📢 GooglePlay,[]DOMAIN-SUFFIX,play.googleapis.com
+ruleset=📢 GooglePlay,[]DOMAIN,connectivitycheck.gstatic.com
+ruleset=📢 GooglePlay,[]DOMAIN-SUFFIX,android.clients.google.com
+ruleset=📢 GooglePlay,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ;谷歌 v6DNS
 ;ruleset=📢 谷歌,[]IP-CIDR,2001:4860:4860::8888/32
 ;Cloudflare v6DNS
@@ -64,48 +64,49 @@ ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
-ruleset=📢 谷歌🇨🇳Play服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
-ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=📢 谷歌,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=📹 Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📹 Youtube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+
+ruleset=📢 GooglePlay,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=📢 Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=📢 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
+ruleset=📢 Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+ruleset=📢 Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=📢 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=Ⓜ️ Onedrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ;ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🍘️ 小米服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoMi/XiaoMi.list
+;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+;ruleset=🍘️ 小米服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoMi/XiaoMi.list
 ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ;ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ;ruleset=🎥 Disney+,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ;ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ;ruleset=🎶 网易音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
+;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
@@ -137,27 +138,27 @@ custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(jiarui)).*`http://cp.clou
 custom_proxy_group=🔯 故障转移`fallback`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`(jiarui)
 custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
-custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=📲 电报消息`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+;custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+;custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ Onedrive`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+;custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📲 Telegram`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+;custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择
 custom_proxy_group=🎶 TikTok`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎥 Disney+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 ;custom_proxy_group=🎻 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📹 Youtube`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🛫 共享`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🛫 极速`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
@@ -177,6 +178,8 @@ custom_proxy_group=🇭🇰 香港节点`smart`((?i)HK|🇭🇰|港|Hong Kong|Ho
 custom_proxy_group=🇹🇼 台湾节点`smart`((?i)TW|🇹🇼|台|新北|彰化|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🇨🇳 犄角旮旯`smart`^(?!(?i).*?(jiarui|US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates|KR|🇰🇷|韩|Korea|首尔|春川|JP|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|Japan|SG|🇸🇬|新加坡|坡|狮城|Singapore|HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港|TW|🇹🇼|台|新北|彰化|Taiwan)).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`🚀 节点选择`🚀 手动切换`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`(jiarui)
+custom_proxy_group=⛓️‍💥 dialer-selector`smart`🚀 手动切换`((?i)vless|vmess|trojan)
+custom_proxy_group=🏳️ FINAL`select`(webshare)`🚀 手动切换
 
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
