--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -15,7 +15,7 @@ ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 ;甲骨文
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oracle.com
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oraclecloud.com
-ruleset=甲骨文,[]DOMAIN-SUFFIX,virtualbrowser.cc
+ruleset=甲骨文,[]DOMAIN-SUFFIX,api.vbhub.net
 
 ;DNS泄露检测
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,ipleak.net
